--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx knex migrate:up & node app.js",
+    "start": "node app.js",
+    "knex": "npx knex",    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
