--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node app.js & knex migrate:latest --env production",
     "knex": "npx knex",    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
